@@ -637,3 +637,5 @@ WebDAV
 transmissionbt
 ouinet
 IANA's
+NOCOW
+btrfs
